[package]
name = "andee-tools"
version = "0.1.0"
description = "a set of tools for andees needs"
edition = "2024"

[dependencies]
chrono = "0.4.44"
color-eyre = "0.6.4"
crossterm = "0.29.0"
ratatui = "0.30.0"
sysinfo = "0.38.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
